navbar option visibility and meals/friends sidebar visibility now functions correctly (to be immediately broken by kevin)

--- a/app/client/css/login.css
+++ b/app/client/css/login.css
@@ -36,6 +36,15 @@
 	box-shadow: 0px 2px 2px rgba(0,0,0, .85);
 }
 
+#startEating>button:hover, #startEating>button:focus
+{
+	background-color :#434470; /*make the background a little darker*/
+	/*reduce the drop shadow size to give a pushed button effect*/
+	-webkit-box-shadow: 0 0 2px rgba(0,0,0, .75);
+	-moz-box-shadow: 0 0 2px rgba(0,0,0, .75);
+	box-shadow: 0 2px 2px rgba(0,0,0, .85);
+}
+
 #inputContainer
 {
 	/*-webkit-transition:all linear 0.15s;*/
@@ -94,12 +103,4 @@
 {
 	text-align: right;
 	position: relative;
-}
-
-#startEating>button:hover, #startEating>button:focus{
-background-color :#434470; /*make the background a little darker*/
-/*reduce the drop shadow size to give a pushed button effect*/
--webkit-box-shadow: 0 0 2px rgba(0,0,0, .75);
--moz-box-shadow: 0 0 2px rgba(0,0,0, .75);
-box-shadow: 0 2px 2px rgba(0,0,0, .85);
 }
