--- a/app/client/css/main.css
+++ b/app/client/css/main.css
@@ -47,6 +47,7 @@
 	height: 100vh;
 	padding: 51px 0px 0px 0px;
 	background-color: rgba(44, 139, 207, 0.9);
+	border-color: rgba(144, 239, 107, 0.9);
 }
 
 #mealInformationContainer > div
@@ -95,7 +96,7 @@
 {
 	background-color: #fff;
 	padding: 0 11px 0 13px;
-	width: 400px;
+	width: 360px;
 	font-family: Roboto;
 	font-size: 15px;
 	font-weight: 300;
